# backend/src/main/resources/openapi/admin-openapi.json
@@ -1,19 +1,10 @@
 {
 	"swagger": "2.0",
 	"info": {
-		"description": "This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key `special-key` to test the authorization filters.",
-		"version": "1.0.7",
-		"title": "Swagger Petstore",
-		"termsOfService": "http://swagger.io/terms/",
-		"contact": {
-			"email": "apiteam@swagger.io"
-		},
-		"license": {
-			"name": "Apache 2.0",
-			"url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-		}
+		"description": "Partial description of the conquery admin REST api",
+		"version": "1.0.0",
+		"title": "Conquery Admin"
 	},
-	"host": "petstore.swagger.io",
 	"basePath": "/admin",
 	"tags": [
 		{
@@ -29,11 +20,10 @@
 		"/config/plugins/form-backend": {
 			"post": {
 				"tags": [
-					"plugin"
+					"config"
 				],
-				"summary": "adds a form backend config",
-				"description": "",
-				"operationId": "addPlugin",
+				"summary": "adds a form backend configurations",
+				"operationId": "registerFormBackend",
 				"consumes": [
 					"application/json"
 				],
@@ -46,73 +36,125 @@
 						"name": "pluginConfig",
 						"schema": {
 							"$ref": "#/definitions/FormBackendConfig"
-						}
+						},
+						"required": true
 					}
 				],
 				"responses": {
 					"200": {
 						"description": "successful operation",
 						"schema": {
-							"$ref": "#/definitions/ApiResponse"
+							"type": "string",
+							"description": "Id of the registered form backend configuration"
 						}
 					}
-				},
-				"security": [
-					{
-						"api_key": [
-							"write:pets",
-							"read:pets"
-						]
+				}
+			},
+			"get": {
+				"tags": [
+					"config"
+				],
+				"summary": "lists all registered form backend configurations",
+				"operationId": "listFormBackends",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "successful operation",
+						"schema": {
+							"description": "Ids of the registered form providers",
+							"type":"array",
+							"items": {
+								"type": "string"
+							}
+						}
 					}
-				]
+				}
 			}
-		}
-	},
-	"securityDefinitions": {
-		"api_key": {
-			"type": "apiKey",
-			"name": "api_key",
-			"in": "header"
+		},
+		"/config/plugins/form-backend/{configId}":{
+			"delete": {
+				"tags": [
+					"config"
+				],
+				"summary": "unegister form backend configuration",
+				"operationId": "deleteFormBackend",
+				"parameters": [
+					{
+						"in": "path",
+						"name": "configId",
+						"type": "string",
+						"required": true
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "successful operation",
+						"schema": {
+							"type": "string",
+							"description": "Id of the deleted form backend configuration"
+						}
+					}
+				}
+			}
 		}
 	},
 	"definitions": {
-		"ApiResponse": {
-			"type": "object",
-			"properties": {
-				"code": {
-					"type": "integer",
-					"format": "int32"
-				},
-				"type": {
-					"type": "string"
-				},
-				"message": {
-					"type": "string"
-				}
-			}
-		},
-		"Test": {
-			"type": "object",
-			"properties": {
-				"id": {
-					"type": "integer",
-					"format": "int64"
-				},
-				"name": {
-					"type": "string"
-				}
-			}
-		},
 		"FormBackendConfig": {
 			"type": "object",
 			"x-discriminator-value": "type",
 			"properties": {
 				"type": {
 					"type": "string"
+				},
+				"id": {
+					"type": "string"
+				},
+				"baseURI": {
+					"type":"string",
+					"format": "uri"
+				},
+				"conqueryApiUrl": {
+					"type":"string",
+					"format": "uri"
+				},
+				"formConfigPath":{
+					"type": "string",
+					"format": "uri",
+					"default": "form-config"
+				},
+				"postFormPath":{
+					"type": "string",
+					"format": "uri",
+					"default": "task"
+				},
+				"statusTemplatePath":{
+					"type": "string",
+					"format": "uri",
+					"default": "task/{task-id}"
+				},
+				"cancelTaskPath":{
+					"type": "string",
+					"format": "uri",
+					"default": "task/{task-id}/cancel"
+				},
+				"healthCheckPath":{
+					"type": "string",
+					"format": "uri",
+					"default": "health"
+				},
+				"versionPath":{
+					"type": "string",
+					"format": "uri",
+					"default": "version"
 				}
 			},
 			"required": [
-				"type"
+				"type",
+				"id",
+				"baseURI",
+				"conqueryApiUrl"
 			]
 		}
 	}
